바텀네이게이션 + 바텀네비 아이템별 프래그먼트 연결

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,7 +3,22 @@
 
     <item
         android:id="@+id/first"
+        android:icon="@drawable/bottomnavi_info_icon"
+        android:title="정보"/>
+
+    <item
+        android:id="@+id/second"
+        android:icon="@drawable/bottomnavi_diary_icon"
+        android:title="백수일기"/>
+
+    <item
+        android:id="@+id/third"
+        android:icon="@drawable/bottomnavi_success_icon"
+        android:title="백수탈출"/>
+
+    <item
+        android:id="@+id/fourth"
         android:icon="@drawable/bottomnavi_user_icon"
-        android:title="user"/>
+        android:title="나"/>
 
 </menu>
